[gd_scene load_steps=3 format=3 uid="uid://deoq7cuk1v6tk"]

[ext_resource type="Script" path="res://scripts/spawner.gd" id="1_1arc4"]

[sub_resource type="Curve2D" id="Curve2D_himlg"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 795, -53, 0, 0, 0, 0, 796.224, 777.329, 0, 0, 0, 0, -59.2096, 773.836, 0, 0, 0, 0, -55.5382, -49.5063, 0, 0, 0, 0, 795, -53)
}
point_count = 5

[node name="Spawner" type="Node2D"]
script = ExtResource("1_1arc4")

[node name="SpawnPath" type="Path2D" parent="."]
position = Vector2(63.382, 50.5109)
scale = Vector2(0.81713, 0.858696)
curve = SubResource("Curve2D_himlg")

[node name="SpawnLocation" type="PathFollow2D" parent="SpawnPath"]
position = Vector2(795, -53)
rotation = 1.56932

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
